[package]
name = "dioxus-demo-liveview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dioxus = "0.3.2"
dioxus-liveview = { version = "0.3.0", features = ["axum"] }
tokio = { version = "1.29.1", features = ["full"] }
getrandom = { version = "0.2", features = ["js"] }
