[package]
name = "p2p-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.52.1"
tokio = "1.29.1"
serde = "1.0.171"
serde_json = "1.0.100"
once_cell = "1.18.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"